Fonts not loading on mobile fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400..900&display=swap');
+
 @import "tailwindcss";
 
 h1 {
-  font-family: 'Playfair Display', italic;
+  font-family: 'Playfair Display', serif;
   font-style: italic;
   font-weight: 900;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 h2 {
-  font-family: 'Playfair Display', italic;
+  font-family: 'Playfair Display', serif;
   font-style: italic;
   font-weight: 900;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
